--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -16,5 +16,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LSP\LSP.fsproj" />
+    <ProjectReference Include="G:\Projects\CK2 Events\CWTools\CWTools.fsproj"/>
   </ItemGroup>
 </Project>
