--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="FSharp.Compiler.Service" Version="16.0.2" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="*"/>
   </ItemGroup>
 
   <ItemGroup>
