--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "request": "launch",
             "runtimeExecutable": "${execPath}",
             "args": [
-                "F:\\Games\\Steam\\steamapps\\common\\Stellaris\\events", "--extensionDevelopmentPath=${workspaceFolder}"
+                "F:\\Games\\Steam\\steamapps\\common\\Stellaris", "--extensionDevelopmentPath=${workspaceFolder}"
             ],
             "outFiles": [
                 "${workspaceFolder}/out/**/*.js"
