Update single files

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-	"name": "cwtools-vscore",
+	"name": "cwtools-vscode",
+	"displayName": "Paradox Languages Services with CWTools",
+	"private": true,
 	"description": "Paradox Interactive file support using cwtools",
 	"author": "Thomas Boby",
 	"license": "MIT",
-	"version": "0.0.1",
-	"publisher": "thomasboby",
+	"version": "0.0.2",
+	"publisher": "Dayshine",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/tboby/cwtools-vscode"
