--- a/package.json
+++ b/package.json
@@ -51,9 +51,13 @@
 			"filenamePatterns": [
 				"**/stellaris/**/*.txt"
 			]
-        }]
-
-	},
+		}],
+		"snippets": [{
+				"language": "paradox",
+				"path": "./snippets/paradox.json"
+			}]
+		},
+	
 	"scripts": {
 		"vscode:prepublish": "tsc -p ./",
 		"compile": "tsc -p ./",
