--- a/package.json
+++ b/package.json
@@ -1,75 +1,88 @@
 {
-	"name": "cwtools-vscode",
-	"displayName": "Paradox Languages Services with CWTools",
-	"private": true,
-	"description": "Paradox Interactive file support using cwtools",
-	"author": "Thomas Boby",
-	"license": "MIT",
-	"version": "0.0.2",
-	"publisher": "Dayshine",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/tboby/cwtools-vscode"
-	},
-	"engines": {
-		"vscode": "^1.16.0"
-	},
-	"categories": [
-		"Languages",
-		"Linters"
-	],
-	"activationEvents": [
-		"onLanguage:paradox"
-	],
-	"main": "./out/client/extension",
-	"files": [
-		"./src/Main/bin/Debug/netcoreapp2.0/Main.dll"
-	],
-	"contributes": {
-		"configuration": {
-			"type": "object",
-			"title": "CWTools configuration",
-			"properties": {
-				"fsharpserver.trace.server": {
-					"scope": "window",
-					"type": "string",
-					"enum": [
-						"off",
-						"messages",
-						"verbose"
-					],
-					"default": "off",
-					"description": "Traces the communication between VSCode and the language server."
-				}
-			}
-		},
-		"languages": [{
-            "id": "paradox",
-            "aliases": ["", "paradox"],
-            "extensions": ["txt"],
-			"configuration": "./language-configuration.json",
-			"filenamePatterns": [
-				"**/stellaris/**/*.txt"
-			]
-		}],
-		"snippets": [{
-				"language": "paradox",
-				"path": "./snippets/paradox.json"
-			}]
-		},
-	
-	"scripts": {
-		"vscode:prepublish": "tsc -p ./",
-		"compile": "tsc -p ./",
-		"watch": "tsc -w -p ./",
-		"update-vscode": "node ./node_modules/vscode/bin/install",
-		"postinstall": "node ./node_modules/vscode/bin/install"
-	},
-	"dependencies": {
-		"vscode": "^1.1.6",
-		"vscode-languageclient": "^3.4.5"
-	},
-	"devDependencies": {
-		"@types/node": "^8.0.47"
-	}
+    "name": "cwtools-vscode",
+    "displayName": "Paradox Language Services with CWTools",
+    "private": true,
+    "description": "Paradox Interactive file support using CWTools",
+    "author": "Dayshine",
+    "license": "MIT",
+    "version": "0.1.1",
+    "preview": true,
+    "publisher": "tboby",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/tboby/cwtools-vscode"
+    },
+    "engines": {
+        "vscode": "^1.16.0"
+    },
+    "categories": [
+        "Languages",
+        "Linters"
+    ],
+    "keywords": [
+        "paradox",
+        "stellaris"
+    ],
+    "activationEvents": [
+        "onLanguage:paradox"
+    ],
+    "main": "./out/client/extension",
+    "files": [
+        "./src/Main/bin/Debug/netcoreapp2.0/Main.dll"
+    ],
+    "contributes": {
+        "configuration": {
+            "type": "object",
+            "title": "CWTools configuration",
+            "properties": {
+                "cwtools.trace.server": {
+                    "scope": "window",
+                    "type": "string",
+                    "enum": [
+                        "off",
+                        "messages",
+                        "verbose"
+                    ],
+                    "default": "off",
+                    "description": "Traces the communication between VSCode and the language server."
+                }
+            }
+        },
+        "languages": [
+            {
+                "id": "paradox",
+                "aliases": [
+                    "",
+                    "paradox"
+                ],
+                "extensions": [
+                    "txt"
+                ],
+                "configuration": "./language-configuration.json",
+                "filenamePatterns": [
+                    "**/stellaris/**/*.txt"
+                ]
+            }
+        ],
+        "snippets": [
+            {
+                "language": "paradox",
+                "path": "./snippets/paradox.json"
+            }
+        ]
+    },
+    "scripts": {
+        "vscode:prepublish": "tsc -p ./",
+        "compile": "tsc -p ./",
+        "watch": "tsc -w -p ./",
+        "update-vscode": "node ./node_modules/vscode/bin/install",
+        "postinstall": "node ./node_modules/vscode/bin/install"
+    },
+    "dependencies": {
+        "vscode": "^1.1.6",
+        "vscode-languageclient": "^3.4.5"
+    },
+    "devDependencies": {
+        "@types/node": "^8.0.47"
+    }
 }
