--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,6 +31,26 @@
                 "${workspaceFolder}/out/test/**/*.js"
             ],
             "preLaunchTask": "npm: watch"
-        }
+        },
+        {
+            "preLaunchTask": "Build",
+			"name": "Build and Launch Extension",
+			"type": "extensionHost",
+			"runtimeExecutable": "${execPath}",
+			"args": ["F:\\Games\\Steam\\steamapps\\common\\Stellaris",  "--extensionDevelopmentPath=${workspaceRoot}" ],
+			"stopOnEntry": false,
+			"request": "launch",
+			"sourceMaps": false
+		},
+		{
+			"name": "Launch Only",
+			"type": "extensionHost",
+			"runtimeExecutable": "${execPath}",
+			"args": ["--extensionDevelopmentPath=${workspaceRoot}" ],
+			"stopOnEntry": false,
+			"request": "launch",
+			"sourceMaps": false
+		}
+
     ]
 }
