--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="game_effects_triggers_1.9.1.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FSharp.Compiler.Service" Version="16.0.2" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="*"/>
   </ItemGroup>
