--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -49,7 +49,8 @@
 			"args": ["--extensionDevelopmentPath=${workspaceRoot}" ],
 			"stopOnEntry": false,
 			"request": "launch",
-			"sourceMaps": false
+            "sourceMaps": false,
+    
 		}
 
     ]
