--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,4 +1,13 @@
-**/*.ts
-**/tsconfig.json
-**/*.vsix
-src/**
+# Ignore everything
+*
+*.**
+
+#src
+!out/**
+
+#extension files
+!snippets/**
+!language-configuration.json
+!package.json
+!README.md
+!TODO.md
