--- a/tests/LSP.Tests/LSP.Tests.fsproj
+++ b/tests/LSP.Tests/LSP.Tests.fsproj
@@ -1,10 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="JsonTests.fs" />
     <Compile Include="TokenizerTests.fs" />
@@ -12,15 +11,8 @@
     <Compile Include="DocumentStoreTests.fs" />
     <Compile Include="LanguageServerTests.fs" />
   </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
-    <PackageReference Include="NUnit" Version="3.8.1" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.8.0" />
-  </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\src\LSP\LSP.fsproj" />
   </ItemGroup>
-
+  <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
