Bundle embedded files to fallback to when no game directory

--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -9,7 +9,7 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="game_effects_triggers_1.9.1.txt" />
+    <EmbeddedResource Include="files/**" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LSP\LSP.fsproj" />
