--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "Paradox Interactive file support using CWTools",
     "author": "Dayshine",
     "license": "MIT",
-    "version": "0.1.11",
+    "version": "0.1.12",
     "preview": true,
     "publisher": "tboby",
     "repository": {
@@ -28,7 +28,8 @@
     ],
     "main": "./out/client/extension",
     "files": [
-        "./src/Main/bin/Debug/netcoreapp2.0/Main.dll"
+        "./src/Main/bin/Debug/netcoreapp2.0/Main.dll",
+        "./out"
     ],
     "contributes": {
         "configuration": {
