--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "name": "cwtools-vscode",
-    "displayName": "Paradox Language Services with CWTools",
+    "displayName": "CWTools - Paradox Language Services",
     "private": true,
-    "description": "Paradox Interactive file support using CWTools",
+    "description": "Paradox Interactive scripting file support using CWTools",
     "author": "Dayshine",
     "license": "MIT",
-    "version": "0.1.17",
+    "version": "0.2.0",
     "preview": true,
     "publisher": "tboby",
-    "qna" : false,
+    "qna": false,
     "repository": {
         "type": "git",
         "url": "https://github.com/tboby/cwtools-vscode"
