--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "description": "Paradox Interactive scripting file support using CWTools",
     "author": "Dayshine",
     "license": "MIT",
-    "version": "0.2.3",
+    "version": "0.2.4",
     "preview": true,
     "publisher": "tboby",
-    "qna": false,
+    "qna": "https://forum.paradoxplaza.com/forum/index.php?threads/tool-cwtools-a-mod-validating-extension-for-vs-code.1066033/",
     "repository": {
         "type": "git",
         "url": "https://github.com/tboby/cwtools-vscode"
