--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -4,6 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
+  	
+ <PropertyGroup><EnableDefaultItems>false</EnableDefaultItems></PropertyGroup>
   <ItemGroup>
     <Compile Include="ProjectManager.fs" />
     <Compile Include="Program.fs" />
