--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -15,7 +15,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LSP\LSP.fsproj" />
-    <ProjectReference Include="G:\Projects\CK2 Events\CWTools\CWTools.fsproj" />
+    <ProjectReference Include="C:\Users\Thomas\git\CK2 Events\CWTools\CWTools.fsproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
