--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
         "vscode-languageclient": "^3.5.0"
     },
     "devDependencies": {
-        "@types/node": "^8.0.47"
+        "@types/node": "^8.0.47",
+        "@types/mocha": "^2.2.42"
     }
 }
