Add experimental flag and 2.0 trigger docs

--- a/package.json
+++ b/package.json
@@ -74,6 +74,12 @@
                     "type": "boolean",
                     "default": "false",
                     "description": "Whether or not to show errors for vanilla files"
+                },
+                "cwtools.experimental": {
+                    "scope": "window",
+                    "type": "boolean",
+                    "default": "false",
+                    "description": "Whether or not to enable experimental features"
                 }
             }
         },
