Add ignore list for errors

--- a/package.json
+++ b/package.json
@@ -75,6 +75,12 @@
                     "default": "false",
                     "description": "Whether or not to show errors for vanilla files"
                 },
+                "cwtools.errors.ignore": {
+                    "scope": "window",
+                    "type":"array",
+                    "description": "Error codes to ignore, list of IDs",
+                    "uniqueItems": true
+                },
                 "cwtools.experimental": {
                     "scope": "window",
                     "type": "boolean",
