--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"rootDir": "client",
-		"outDir": "out",
+		"outDir": "out/client",
 		"lib": [ "es2016" ],
 		"sourceMap": true
 	},
