--- a/package.json
+++ b/package.json
@@ -109,6 +109,11 @@
                 ]
             }
         ],
+        "grammars": [{
+            "language": "paradox",
+            "scopeName": "source.mod",
+            "path": "./syntaxes/cwtools-paradox.tmLanguage.json"
+        }],
         "snippets": [
             {
                 "language": "paradox",
