--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "Paradox Interactive scripting file support using CWTools",
     "author": "Dayshine",
     "license": "MIT",
-    "version": "0.4.3",
+    "version": "0.4.4",
     "preview": true,
     "publisher": "tboby",
     "qna": "https://forum.paradoxplaza.com/forum/index.php?threads/tool-cwtools-a-mod-validating-extension-for-vs-code.1066033/",
@@ -80,6 +80,19 @@
                     "type": "array",
                     "description": "Error codes to ignore, list of IDs",
                     "uniqueItems": true
+                },
+                "cwtools.errors.ignorefiles": {
+                    "scope": "window",
+                    "type": "array",
+                    "description": "Files to ignore errors from, list of file names",
+                    "uniqueItems": true,
+                    "default": [
+                        "README.txt",
+                        "credits.txt",
+                        "credits_l_simp_chinese.txt",
+                        "reference.txt",
+                        "startup_info.txt"
+                    ]
                 },
                 "cwtools.experimental": {
                     "scope": "window",
