--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,6 +1,6 @@
 {
     "comments": {
-        "lineComment": "#",
+        "lineComment": "#"
     },
     "brackets": [
         ["{", "}"]
@@ -18,6 +18,6 @@
     "indentationRules": {
         "increaseIndentPattern": "((\\{\\s*))$",
         "decreaseIndentPattern": "^\\s*((\\}))"
-    }
+    }   
     
 }
