--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "Paradox Interactive scripting file support using CWTools",
     "author": "Dayshine",
     "license": "MIT",
-    "version": "0.4.11",
+    "version": "0.4.16",
     "preview": true,
     "publisher": "tboby",
     "qna": "https://forum.paradoxplaza.com/forum/index.php?threads/tool-cwtools-a-mod-validating-extension-for-vs-code.1066033/",
@@ -33,6 +33,13 @@
         "./out"
     ],
     "contributes": {
+        "commands": [
+            {
+                "command": "outputerrors",
+                "title": "Write errors to file",
+                "category": "cwtools"
+            }
+        ],
         "configuration": {
             "type": "object",
             "title": "CWTools configuration",
