--- a/language-configuration.json
+++ b/language-configuration.json
@@ -18,6 +18,6 @@
     "indentationRules": {
         "increaseIndentPattern": "((\\{\\s*))$",
         "decreaseIndentPattern": "^\\s*((\\}))"
-    }   
-    
+    },
+    "wordPattern": "\"?([^\\s]+)\"?"
 }
