--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "vscode": "^1.19.0"
     },
     "categories": [
-        "Languages",
+        "Programming Languages",
         "Linters"
     ],
     "keywords": [
@@ -111,7 +111,7 @@
         },
         "languages": [
             {
-                "id": "paradox",
+                "id": "stellaris",
                 "aliases": [
                     "",
                     "paradox"
@@ -129,6 +129,21 @@
                     "**/stellaris/**/*.gfx",
                     "**/stellaris/**/*.asset"
                 ]
+            }
+        ],
+        "grammars": [
+            {
+                "language": "stellaris",
+                "scopeName": "source.mod",
+                "path": "./syntaxes/paradox.tmLanguage.json"
+            },
+   
+            {
+                "scopeName": "source.stellaris",
+                "injectTo": [
+                    "source.mod"
+                ],
+                "path": "./syntaxes/stellaris.tmLanguage.json"
             }
         ],
         "snippets": [
