--- a/package.json
+++ b/package.json
@@ -107,6 +107,12 @@
                     "type": "boolean",
                     "default": "false",
                     "description": "Whether or not to enable experimental features"
+                },
+                "cwtools.experimental_completion": {
+                    "scope": "window",
+                    "type": "boolean",
+                    "default": "false",
+                    "description": "Whether or not to enable experimental completion"
                 }
             }
         },
