--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="files/**" />
+    <EmbeddedResource Include="config/**" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LSP\LSP.fsproj" />
