--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <AssemblyName>CWTools Server</AssemblyName>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
-  	
+
  <PropertyGroup><EnableDefaultItems>false</EnableDefaultItems></PropertyGroup>
   <ItemGroup>
     <Compile Include="ProjectManager.fs" />
