--- a/src/LSP/LSP.fsproj
+++ b/src/LSP/LSP.fsproj
@@ -4,7 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Json.fs" />
+    <Compile Include="Log.fs" />
+    <Compile Include="Ser.fs" />
     <Compile Include="Types.fs" />
     <Compile Include="Tokenizer.fs" />
     <Compile Include="Parser.fs" />
