--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "Paradox Interactive scripting file support using CWTools",
     "author": "Dayshine",
     "license": "MIT",
-    "version": "0.5.16",
+    "version": "0.5.17",
     "preview": true,
     "publisher": "tboby",
     "qna": "https://forum.paradoxplaza.com/forum/index.php?threads/tool-cwtools-a-mod-validating-extension-for-vs-code.1066033/",
@@ -38,6 +38,11 @@
             {
                 "command": "outputerrors",
                 "title": "Write errors to file",
+                "category": "cwtools"
+            },
+            {
+                "command": "genlocall",
+                "title": "Generate missing loc for all files",
                 "category": "cwtools"
             }
         ],
