--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -17,7 +17,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LSP\LSP.fsproj" />
-    <ProjectReference Include="C:\Users\Thomas\git\CK2 Events\CWTools\CWTools.fsproj" />
+    <ProjectReference Include="../../paket-files/github.com/tboby/cwtools/CWTools/CWTools.fsproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
