--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 		"noUnusedLocals": false,
 		"noUnusedParameters": true,
 		"noImplicitAny": true,
-		"noImplicitReturns": true,		
+		"noImplicitReturns": true,
 		"target": "es6",
 		"module": "commonjs",
 		"moduleResolution": "node",
@@ -14,6 +14,7 @@
 	},
 	"exclude": [
 		"node_modules",
-		"server"
+		"server",
+		"paket-files"
 	]
 }
