Fix paket dependency

--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -18,7 +18,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LSP\LSP.fsproj" />
+    <ProjectReference Include="..\..\paket-files\localfilesystem\cwtools\CWTools\CWTools.fsproj" />
   </ItemGroup>
-  <Import Project="..\..\paket-files\localfilesystem/cwtools/" />
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
