--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "Paradox Interactive scripting file support using CWTools",
     "author": "Dayshine",
     "license": "MIT",
-    "version": "0.5.30",
+    "version": "0.5.31",
     "preview": true,
     "publisher": "tboby",
     "qna": "https://forum.paradoxplaza.com/forum/index.php?threads/tool-cwtools-a-mod-validating-extension-for-vs-code.1066033/",
@@ -189,5 +189,8 @@
     "devDependencies": {
         "@types/node": "^8.0.47",
         "@types/mocha": "^2.2.42"
-    }
+    },
+    "extensionPack": [
+        "tboby.paradox-syntax"
+    ]
 }
