--- a/package.json
+++ b/package.json
@@ -183,6 +183,7 @@
         "postinstall": "node ./node_modules/vscode/bin/install"
     },
     "dependencies": {
+        "npm": "^6.4.0",
         "vscode": "^1.1.17",
         "vscode-languageclient": "^4.1.3"
     },
