Update to fake 5

--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -18,7 +18,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LSP\LSP.fsproj" />
-    <ProjectReference Include="..\..\paket-files\git\localfilesystem\ck2eventviewer\CWTools\CWTools.fsproj" />
+    <ProjectReference Include="..\..\paket-files\git\localfilesystem\cwtools\CWTools\CWTools.fsproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
