--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,4 +15,6 @@ build:
     - cd cwtools-vscode
     - chmod +x ./build.sh
     - bash ./build.sh
-   
+    cache:
+      paths:
+      - packages/
