--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ build:
     - cd ..
     - git clone https://www.github.com/tboby/cwtools
     - cd cwtools-vscode
+    - git clone --verbose --mirror "../cwtools" "/root/.paket/git/db/cwtools"
     - chmod +x ./build.sh
     - bash ./build.sh
     cache:
