--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,9 @@ build:
     - git clone https://www.github.com/tboby/cwtools
     - cd cwtools-vscode
     - git clone --verbose --mirror "../cwtools" "/root/.paket/git/db/cwtools"
+    - cd /root/.paket/git/db/cwtools
+    - git remote set-url origin "../cwtools"
+    - cd $CI_PROJECT_DIR
     - chmod +x ./build.sh
     - bash ./build.sh
     cache:
