--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ build:
     - git clone --verbose --mirror "../cwtools" "/root/.paket/git/db/cwtools"
     - cd /root/.paket/git/db/cwtools
     - git remote set-url origin "../cwtools"
+    - git remote update --prune
     - cd $CI_PROJECT_DIR
     - chmod +x ./build.sh
     - bash ./build.sh
