--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ build:
     - git remote set-url origin "../cwtools"
     - git remote update --prune
     - cd $CI_PROJECT_DIR
-    - mono ./.paket/paket.exe restore
+    - mono ./.paket/paket.exe restore --verbose
     - chmod +x ./build.sh
     - bash ./build.sh
     cache:
