--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,8 +19,7 @@ build:
     - git remote update --prune
     - cd $CI_PROJECT_DIR
     - GIT_TRACE=$CI_PROJECT_DIR/git.log
-    - cat git.log
-    - mono ./.paket/paket.exe restore --verbose
+    - mono ./.paket/paket.exe restore || cat git.log
     - chmod +x ./build.sh
     - bash ./build.sh
     cache:
