--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,8 @@ build:
     - git remote set-url origin "../cwtools"
     - git remote update --prune
     - cd $CI_PROJECT_DIR
-    - GIT_TRACE=1 mono ./.paket/paket.exe restore
+    - GIT_TRACE=${CI_PROJECT_DIR}/git.log mono ./.paket/paket.exe restore
+    - cat ${CI_PROJECT_DIR}/git.log
     - chmod +x ./build.sh
     - bash ./build.sh
     cache:
