--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,8 @@ build:
     - git remote update --prune
     - cd $CI_PROJECT_DIR
     - GIT_TRACE=${CI_PROJECT_DIR}/git.log
-    - GIT_TRACE=${CI_PROJECT_DIR}/git.log mono ./.paket/paket.exe restore || cat ${CI_PROJECT_DIR}/git.log
+    - GIT_CURL_VERBOSE=${CI_PROJECT_DIR}/git.log
+    - GIT_CURL_VERBOSE=${CI_PROJECT_DIR}/git.log GIT_TRACE=${CI_PROJECT_DIR}/git.log mono ./.paket/paket.exe restore || cat ${CI_PROJECT_DIR}/git.log
     - chmod +x ./build.sh
     - bash ./build.sh
     cache:
