--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ build:
     - git remote set-url origin "../cwtools"
     - GIT_TRACE=${CI_PROJECT_DIR}/git.log GIT_CURL_VERBOSE=${CI_PROJECT_DIR}/git.log GIT_TRACE_CURL=${CI_PROJECT_DIR}/git2.log git remote update --prune
     - cd $CI_PROJECT_DIR
-    - GIT_CURL_VERBOSE=${CI_PROJECT_DIR}/git.log GIT_TRACE=${CI_PROJECT_DIR}/git.log GIT_TRACE_CURL=${CI_PROJECT_DIR}/git2.log mono ./.paket/paket.exe restore || cat ${CI_PROJECT_DIR}/git.log || cat ${CI_PROJECT_DIR}/git2.log
+    - GIT_CURL_VERBOSE=${CI_PROJECT_DIR}/git.log GIT_TRACE=${CI_PROJECT_DIR}/git.log GIT_TRACE_CURL=${CI_PROJECT_DIR}/git2.log mono ./.paket/paket.exe restore -v || cat ${CI_PROJECT_DIR}/git.log || cat ${CI_PROJECT_DIR}/git2.log
     - chmod +x ./build.sh
     - bash ./build.sh
     cache:
