--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,9 @@ build:
     - git remote set-url origin "../cwtools"
     - GIT_TRACE=${CI_PROJECT_DIR}/git.log GIT_CURL_VERBOSE=${CI_PROJECT_DIR}/git.log GIT_TRACE_CURL=${CI_PROJECT_DIR}/git2.log git remote update --prune
     - cd $CI_PROJECT_DIR
-    - PAKET_DETAILED_ERRORS=true GIT_CURL_VERBOSE=${CI_PROJECT_DIR}/git.log GIT_TRACE=${CI_PROJECT_DIR}/git.log GIT_TRACE_CURL=${CI_PROJECT_DIR}/git2.log mono ./.paket/paket.bootstrapper.exe restore -v --log-file ${CI_PROJECT_DIR}/git3.log || cat ${CI_PROJECT_DIR}/git.log || cat ${CI_PROJECT_DIR}/git2.log || cat ${CI_PROJECT_DIR}/git3.log
+    - rm ./.paket/paket.exe
+    - mv ./.paket/paket.bootstrapper.exe ./.paket/paket.exe
+    - PAKET_DETAILED_ERRORS=true GIT_CURL_VERBOSE=${CI_PROJECT_DIR}/git.log GIT_TRACE=${CI_PROJECT_DIR}/git.log GIT_TRACE_CURL=${CI_PROJECT_DIR}/git2.log mono ./.paket/paket.exe restore -v --log-file ${CI_PROJECT_DIR}/git3.log || cat ${CI_PROJECT_DIR}/git.log || cat ${CI_PROJECT_DIR}/git2.log || cat ${CI_PROJECT_DIR}/git3.log
     - cat ${CI_PROJECT_DIR}/git3.log
     - chmod +x ./build.sh
     - bash ./build.sh || bash ./build.sh
