--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ build:
     - cd ..
     - git clone https://www.github.com/tboby/cwtools
     - cd cwtools-vscode
-    - CWTOOLSPATH=readlink -f "../cwtools"
+    - CWTOOLSPATH=$(readlink -f "../cwtools")
     - git clone --verbose --mirror "../cwtools" "/root/.paket/git/db/cwtools"
     - cd /root/.paket/git/db/cwtools
     - git remote set-url origin $CWTOOLSPATH
