--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,13 +13,13 @@ build:
     - cd ..
     - git clone https://www.github.com/tboby/cwtools
     - cd cwtools-vscode
-    - CWTOOLSPATH=$(readlink -f "../cwtools")
-    - git clone --verbose --mirror "../cwtools" "/root/.paket/git/db/cwtools"
-    - cd /root/.paket/git/db/cwtools
-    - echo $CWTOOLSPATH
-    - git remote set-url origin $CWTOOLSPATH
+    #- CWTOOLSPATH=$(readlink -f "../cwtools")
+    #- git clone --verbose --mirror "../cwtools" "/root/.paket/git/db/cwtools"
+    #- cd /root/.paket/git/db/cwtools
+    #- echo $CWTOOLSPATH
+    #- git remote set-url origin $CWTOOLSPATH
   #  - GIT_TRACE=${CI_PROJECT_DIR}/git.log GIT_CURL_VERBOSE=${CI_PROJECT_DIR}/git.log GIT_TRACE_CURL=${CI_PROJECT_DIR}/git2.log git remote update --prune
-    - cd $CI_PROJECT_DIR
+    #- cd $CI_PROJECT_DIR
     - rm ./.paket/paket.exe
     - mv ./.paket/paket.bootstrapper.exe ./.paket/paket.exe
 #    - PAKET_DETAILED_ERRORS=true GIT_CURL_VERBOSE=${CI_PROJECT_DIR}/git.log GIT_TRACE=${CI_PROJECT_DIR}/git.log GIT_TRACE_CURL=${CI_PROJECT_DIR}/git2.log mono ./.paket/paket.exe restore -v --log-file ${CI_PROJECT_DIR}/git3.log || cat ${CI_PROJECT_DIR}/git.log || cat ${CI_PROJECT_DIR}/git2.log || cat ${CI_PROJECT_DIR}/git3.log
