--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,8 @@ build:
     - cd ..
     - git clone https://www.github.com/tboby/cwtools
     - cd cwtools-vscode
-    - npm install
     - npm install -g typescript
+    - npm install --unsafe-perm
     #- CWTOOLSPATH=$(readlink -f "../cwtools")
     #- git clone --verbose --mirror "../cwtools" "/root/.paket/git/db/cwtools"
     #- cd /root/.paket/git/db/cwtools
