--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "main": "./out/client/extension",
     "files": [
         "./src/Main/bin/Debug/netcoreapp2.0/Main.dll",
-        "./out"
+        "./out",
+        "./embedded"
     ],
     "contributes": {
         "commands": [
