--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ variables:
 stages:
   - build
   - release
-      
+
 build:
     stage: build
     script:
@@ -26,6 +26,7 @@ build:
     #- cd $CI_PROJECT_DIR
     - rm ./.paket/paket.exe
     - mv ./.paket/paket.bootstrapper.exe ./.paket/paket.exe
+    - mono ./.paket/paket.exe clear-cache
 #    - PAKET_DETAILED_ERRORS=true GIT_CURL_VERBOSE=${CI_PROJECT_DIR}/git.log GIT_TRACE=${CI_PROJECT_DIR}/git.log GIT_TRACE_CURL=${CI_PROJECT_DIR}/git2.log mono ./.paket/paket.exe restore -v --log-file ${CI_PROJECT_DIR}/git3.log || cat ${CI_PROJECT_DIR}/git.log || cat ${CI_PROJECT_DIR}/git2.log || cat ${CI_PROJECT_DIR}/git3.log
 #    - cat ${CI_PROJECT_DIR}/git3.log
     - chmod +x ./build.sh
@@ -47,6 +48,8 @@ dry-release:
     - npm install --unsafe-perm
     - rm ./.paket/paket.exe
     - mv ./.paket/paket.bootstrapper.exe ./.paket/paket.exe
+    - mono ./.paket/paket.exe clear-cache
+    - echo "[{\"name\":\"Shan\",\"pat\":\"$VSCE_TOKEN\"}]" > ~/.vsce
     - chmod +x ./build.sh
     - bash ./build.sh DryRelease
     cache:
