--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,8 +44,6 @@ dry-release:
     - npm install -g typescript
     - npm install -g vsce
     - npm install --unsafe-perm
-    - mono ./.paket/paket.exe clear-cache
-    - echo "[{\"name\":\"Shan\",\"pat\":\"$VSCE_TOKEN\"}]" > ~/.vsce
     - chmod +x ./build.sh
     - bash ./build.sh DryRelease
     cache:
@@ -68,8 +66,8 @@ release:
     - npm install -g typescript
     - npm install -g vsce
     - npm install --unsafe-perm
-    - rm ./.paket/paket.exe
-    - mv ./.paket/paket.bootstrapper.exe ./.paket/paket.exe
+    - mono ./.paket/paket.exe clear-cache
+    - echo "[{\"name\":\"tboby\",\"pat\":\"$VSCE_TOKEN\"}]" > ~/.vsce
     - chmod +x ./build.sh
     - bash ./build.sh Release
     cache:
