--- a/package.json
+++ b/package.json
@@ -46,6 +46,11 @@
                 "command": "genlocall",
                 "title": "Generate missing loc for all files",
                 "category": "cwtools"
+            },
+            {
+                "command": "reloadrulesconfig",
+                "title": "Reload config rules",
+                "category": "cwtools"
             }
         ],
         "configuration": {
