--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,7 @@ build:
       paths:
       - nupkgs/
       - node_modules/
+      - .fake/
 
 dry-release:
     stage: release
@@ -50,6 +51,7 @@ dry-release:
       paths:
       - nupkgs/
       - node_modules/
+      - .fake/
     artifacts:
       paths:
       - temp/
@@ -74,4 +76,5 @@ release:
       paths:
       - nupkgs/
       - node_modules/
+      - .fake/
     when: manual
