--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,7 +23,7 @@
             },
             "label": "Build",
             "args": [
-                "Build"
+                "QuickBuild"
             ],
             "group": {
                 "kind": "build",
