FIx linux by using .xml

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -41,9 +41,8 @@
 			"args": ["C:\\PRogramming\\Stellaris\\stellaris",  "--extensionDevelopmentPath=${workspaceRoot}" ],
 			"stopOnEntry": false,
 			"request": "launch",
-            "sourceMaps": false,
-            "debugServer": 0
-		},
+            "sourceMaps": false
+        		},
 		{
             "name": "Launch Only",
 			"type": "extensionHost",
