--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -4,6 +4,7 @@
     <AssemblyName>CWTools Server</AssemblyName>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetLatestRuntimePatch>True</TargetLatestRuntimePatch>
   </PropertyGroup>
   <PropertyGroup>
     <EnableDefaultItems>false</EnableDefaultItems>
