Add vanilla caching

--- a/package.json
+++ b/package.json
@@ -52,6 +52,11 @@
                 "command": "reloadrulesconfig",
                 "title": "Reload config rules",
                 "category": "cwtools"
+            },
+            {
+                "command": "cwtools.setCache",
+                "title": "Generate cache",
+                "category": "cwtools"
             }
         ],
         "configuration": {
