--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <Compile Include="ProjectManager.fs" />
     <Compile Include="Serialize.fs" />
+    <Compile Include="Git.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
