Update serialization for files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.exclude": {
         ".git/**": true,
         ".idea/": true,
+        "**/.git": false,
         "**/bin/": true,
         "**/obj/": true
     }
