Update dotnet core

--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -3,8 +3,9 @@
   <PropertyGroup>
     <AssemblyName>CWTools Server</AssemblyName>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <TargetLatestRuntimePatch>True</TargetLatestRuntimePatch>
+    <TieredCompilation>true</TieredCompilation>
   </PropertyGroup>
   <PropertyGroup>
     <EnableDefaultItems>false</EnableDefaultItems>
